Revert scrollbar fix

--- a/src-web/main.css
+++ b/src-web/main.css
@@ -58,15 +58,11 @@
   .hide-scrollbars {
     &::-webkit-scrollbar-corner,
     &::-webkit-scrollbar {
-      display: NONE !important;
+      @apply hidden !important;
     }
   }
 
-  /* Style the scrollbars
-   * Mac doesn't like this (especially in CodeMirror) so we only do it on non-macos platforms. On Mac,
-   * styling the scrollbar seems to cause them to not show up at all most of the time
-  */
-  html:not([data-platform="macos"]) {
+  html {
     * {
       ::-webkit-scrollbar-corner,
       ::-webkit-scrollbar {
